--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,201 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-bg-dark: #3a3a3ac0;
+  --color-bg-black: #0e0e0ebc;
+  --color-white: #fefefe;
+  --color-black: #000;
+  --color-primary: #ffffff;
+  --color-danger: rgb(249, 84, 84);
+}
+
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  color: var(--color-white);
+  line-height: 1.5;
+  background: gray;
+}
+
+.btn{
+  background-color: var(--color-bg-dark);
+  border-radius: 0.8rem;
+  padding: 0.8rem;
+  font-size: 1.6rem;
+  color: var(--color-white);
+  box-shadow: 0 1rem 1rem rgba(0,0,0,.2);
+}
+
+.btn.lg {
+  padding: 0.8rem 1.5rem;
+  font-size: 1.2rem;
+  box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.4);
+}
+
+.btn.add-btn{
+  position: fixed;
+  bottom: 4rem;
+  right: 1.5rem;
+  padding: .8rem;
+}
+
+.btn.delete{
+  background-color: var(--color-danger);
+}
+
+.btn:hover{
+  cursor: pointer;
+  box-shadow: none;
+}
+
+#app{
+  background: var(--color-bg-black);
+  height: 100vh;
+  width: 100vw;
+  padding: 2rem 1.6rem;
+  overflow-y: scroll;
+  position: relative;
+  opacity: 1;
+  transition:  all .5s ease;
+
+}
+
+#app:hover{
+  opacity: 1;
+}
+
+::-webkit-scrollbar{
+  display: none;
+}
+
+
+h2{
+  font-size: 2rem;
+}
+
+.container{
+  margin-top: 30px;
+}
+
+.note-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 9;
+}
+
+
+.note-header input{
+  padding: .7rem 1rem;
+  background: transparent;
+  border: 1px solid var(--color-bg-dark);
+  border-radius: .6rem;
+  font-size: 1.1rem;
+  color: var(--color-white);
+  width: 100%;
+  margin-right: 1.5rem;
+}
+
+.note-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.2rem;
+  margin-top: 35px;
+}
+
+.empty-note{
+  font-size: 1.5rem;
+}
+
+.note{
+  background-color: var(--color-primary);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: all 300ms ease;
+  color: var(--color-black);
+  font-weight: bold;
+}
+
+
+.note:hover{
+  opacity: .9;
+}
+
+.note:nth-child(3) {
+  grid-column: 1/3;
+}
+.note:nth-child(4) {
+  grid-row: 3/5;
+}
+.note:nth-child(7) {
+  grid-column: 1/3;
+}
+
+.note p{
+  font-size: .8rem;
+  opacity: .95;
+}
+
+.create-note-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.create-note-form{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.create-note-form input,
+.create-note-form textarea{
+  width: 100%;
+  padding: .5rem 1rem;
+  background: transparent;
+  border-radius: .2rem;
+  color: var(--color-white);
+  font-size: 25px;
+}
+
+
+@media screen and (max-width: 600px) {
+  #app {
+    width: 100vw;
+    height: 100vh;
+    padding: 2rem 1rem;
+  }
+  .note-header {
+    width: 100%;
+    padding: 2rem 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  .note-container {
+    margin-top: 5rem;
+    gap: 1rem;
+  }
+  .btn.add-btn {
+    padding: 0.75rem;
+    font-size: 1.5rem;
+    bottom: 6%;
+    right: 2rem;
+  }
 }
